# lolfetch

./: .gitignore  Cargo.toml  README.md
lolfetch_ascii/: Cargo.toml
lolfetch_ascii/src/: color.rs  image.rs  lib.rs
lolfetch_color/: Cargo.toml
lolfetch_color/src/: color.rs  lib.rs
src/: api.rs  app.rs  cache.rs  cli.rs  config.rs  data.rs  display.rs  dragon.rs  info.rs  logging.rs  main.rs  models.rs  riot_api.rs  ui.rs  utils.rs
src/api/: account.rs  mastery.rs  matches.rs  rank.rs  static_data.rs  tooling.rs
src/api/tooling/: ranked_schedule.rs  region.rs  static_data.rs
src/cli/: cache.rs  image.rs  lolfetch.rs
src/cli/lolfetch/: custom.rs  mastery.rs  ranked.rs  recent_matches.rs
src/data/: champion_stats.rs  champions.rs  mastery.rs  match_history.rs  summoner.rs
src/display/: utils.rs
src/display/utils/: colors.rs
src/info/: champions.rs  mastery.rs  match_history.rs  summoner.rs
src/models/: champion_stats.rs  matches.rs  ranked.rs
src/riot_api/: account.rs  mastery.rs  matches.rs
src/ui/: color.rs  image.rs
