[package]
name = "lolfetch-ascii"
description = "Handles ASCII art for lolfetch"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.2"
colored = "2.0.0"
reqwest = { version = "0.12.5" }
termcolor = "1.4"
lolfetch_color = { path = "../lolfetch_color" }
rayon = "1.10.0"
url = "2.5.2"
thiserror = "1.0.63"
